# lseg-ai-assistant

./: .gitignore  Dockerfile  README.md  demo.py  main.py  pyproject.toml  requirements.txt
docs/: Example User Questions.txt  INCIDENT-TICKETS.csv  SOP-001-Access-Management.md  SOP-002-Deployment.md  SOP-003-Data-Operations.md
infra/: iam_policies.py  lambda_ingestion.py  opensearch_setup.py  s3_setup.py
src/: assistant.py  bedrock_client.py  config.py
src/api/: app.py  routes.py  schemas.py
src/embeddings/: bedrock_embeddings.py
src/guardrails/: guardrails.py
src/ingestion/: chunker.py  document_loader.py
src/llm/: bedrock_llm.py  prompt_templates.py
src/retrieval/: retriever.py
src/structured/: ticket_query.py
src/vector_store/: faiss_store.py
