[project]
name = "lseg-ai-assistant"
version = "0.1.0"
description = "LSEG DSM internal AI assistant — RAG over SOPs and incident tickets using Amazon Bedrock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "numpy>=2.4.5",
    "pandas>=3.0.3",
    "uvicorn[standard]>=0.47.0",
]
